# NickPranskePublic

./: README.md
Yahtzee/Vibe_Code_Attempts/Yahtzee_MLOps/: OPERATIONS.md  README.md  analysis_results.md  app.py  pyproject.toml
Yahtzee/Vibe_Code_Attempts/Yahtzee_MLOps/models/: latest_metrics.json
Yahtzee/Vibe_Code_Attempts/Yahtzee_MLOps/scripts/: install_nightly_task.ps1  run_local_pipeline.ps1
Yahtzee/Vibe_Code_Attempts/Yahtzee_MLOps/tests/: test_game.py  test_scoring.py
Yahtzee_Expectimax/: README.md  pyproject.toml
Yahtzee_Expectimax/analysis/: RESULTS.md  diagnose_tournament_100_upperpressure.json  numba_bottomup_200.json  numba_candidate_200_fixed.json  tournament_1000.json  tournament_200.json  turbo_10000.json
Yahtzee_Expectimax/src/yahtzee_expectimax/: dice.py  game.py  numba_solver.py  scoring.py  solver.py  tournament.py
Yahtzee_Expectimax/src/yahtzee_expectimax/__pycache__/: numba_solver._best_score-133.py312.2.nbc  numba_solver._best_score-133.py312.4.nbc  numba_solver._best_score-163.py312.1.nbc  numba_solver._best_score-163.py312.3.nbc  numba_solver._best_score-163.py312.nbi  numba_solver._choose_action-181.py312.nbi  numba_solver._choose_action-212.py312.1.nbc  numba_solver._choose_action-212.py312.2.nbc  numba_solver._choose_action-212.py312.nbi  numba_solver._comb-91.py312.1.nbc  numba_solver._comb-91.py312.2.nbc  numba_solver._compute_turn_values-218.py312.2.nbc  numba_solver._keep_global_index-70.py312.1.nbc  numba_solver._keep_global_index-70.py312.nbi  numba_solver._play_games-255.py312.1.nbc  numba_solver._play_games-255.py312.nbi  (+9 more)
(+128 files in other folders)
