[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yahtzee-expectimax"
version = "0.1.0"
description = "High-scoring Yahtzee bot using expectimax dynamic programming."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
yahtzee-expectimax = "yahtzee_expectimax.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
